// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render failed 1`] = `
.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c11:hover,
.c11:focus {
  background: #B29DFF;
}

.c11:active {
  background: #C5B6FF;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: rgba(255,255,255,0.87);
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c12:hover,
.c12:focus {
  background: rgba(255,255,255,0.13);
}

.c12:active {
  background: rgba(255,255,255,0.18);
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 8px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c6 a {
  color: #FFFFFF;
}

.c7 {
  box-sizing: border-box;
  min-width: 500px;
  margin-bottom: 32px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c10 {
  box-sizing: border-box;
}

.c9 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c9 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.24);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c9 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.24);
}

.c9 .react-select__control:hover,
.c9 .react-select__control:focus,
.c9 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.56);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c9 .react-select__control:hover .react-select__dropdown-indicator,
.c9 .react-select__control:focus .react-select__dropdown-indicator,
.c9 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c9 .react-select__control .react-select__indicator:hover,
.c9 .react-select__control .react-select__dropdown-indicator:hover,
.c9 .react-select__control .react-select__indicator:focus,
.c9 .react-select__control .react-select__dropdown-indicator:focus,
.c9 .react-select__control .react-select__indicator:active,
.c9 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c9 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.56);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c9 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c9 .react-select__single-value {
  color: #FFFFFF;
}

.c9 .react-select__placeholder {
  color: rgba(255,255,255,0.24);
}

.c9 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c9 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c9 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c9 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c9 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c9 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c9 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c9 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c9 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c9 .react-select__clear-indicator {
  color: rgba(255,255,255,0.56);
}

.c9 .react-select__clear-indicator:hover,
.c9 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c9 .react-select__clear-indicator:hover svg,
.c9 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c9 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c9 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c9 .react-select__indicator-separator {
  display: none;
}

.c9 .react-select__loading-indicator {
  display: none;
}

.c9 .react-select--is-disabled,
.c9 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.18);
  border: 1px solid rgba(255,255,255,0.18);
}

.c9 .react-select--is-disabled .react-select__single-value,
.c9 .react-select__control--is-disabled .react-select__single-value,
.c9 .react-select--is-disabled .react-select__placeholder,
.c9 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.18);
}

.c9 .react-select--is-disabled .react-select__indicator,
.c9 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.18);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Select a maintenance start window
        </div>
      </div>
      <div
        class="c6"
        kind="danger"
      >
        there was an error processing the request
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          Teleport provides different cluster maintenance windows to minimize downtime during upgrades, patches, etc.
        </div>
        <div
          class="c9"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  08:00 (UTC)
                </div>
                <div
                  class="css-b8ldur-Input"
                >
                  <div
                    class="react-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-4-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="primary"
        >
          Save
        </button>
        <button
          class="c12"
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render loaded 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c10:hover,
.c10:focus {
  background: #B29DFF;
}

.c10:active {
  background: #C5B6FF;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: rgba(255,255,255,0.87);
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.13);
}

.c11:active {
  background: rgba(255,255,255,0.18);
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 8px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  min-width: 500px;
  margin-bottom: 32px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c9 {
  box-sizing: border-box;
}

.c8 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c8 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.24);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c8 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.24);
}

.c8 .react-select__control:hover,
.c8 .react-select__control:focus,
.c8 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.56);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c8 .react-select__control:hover .react-select__dropdown-indicator,
.c8 .react-select__control:focus .react-select__dropdown-indicator,
.c8 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c8 .react-select__control .react-select__indicator:hover,
.c8 .react-select__control .react-select__dropdown-indicator:hover,
.c8 .react-select__control .react-select__indicator:focus,
.c8 .react-select__control .react-select__dropdown-indicator:focus,
.c8 .react-select__control .react-select__indicator:active,
.c8 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c8 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.56);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c8 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c8 .react-select__single-value {
  color: #FFFFFF;
}

.c8 .react-select__placeholder {
  color: rgba(255,255,255,0.24);
}

.c8 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c8 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c8 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c8 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c8 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c8 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c8 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c8 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c8 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c8 .react-select__clear-indicator {
  color: rgba(255,255,255,0.56);
}

.c8 .react-select__clear-indicator:hover,
.c8 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c8 .react-select__clear-indicator:hover svg,
.c8 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c8 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c8 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c8 .react-select__indicator-separator {
  display: none;
}

.c8 .react-select__loading-indicator {
  display: none;
}

.c8 .react-select--is-disabled,
.c8 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.18);
  border: 1px solid rgba(255,255,255,0.18);
}

.c8 .react-select--is-disabled .react-select__single-value,
.c8 .react-select__control--is-disabled .react-select__single-value,
.c8 .react-select--is-disabled .react-select__placeholder,
.c8 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.18);
}

.c8 .react-select--is-disabled .react-select__indicator,
.c8 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.18);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Select a maintenance start window
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          Teleport provides different cluster maintenance windows to minimize downtime during upgrades, patches, etc.
        </div>
        <div
          class="c8"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  08:00 (UTC)
                </div>
                <div
                  class="css-b8ldur-Input"
                >
                  <div
                    class="react-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-2-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c9"
      >
        <button
          class="c10"
          kind="primary"
        >
          Save
        </button>
        <button
          class="c11"
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render processing 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c10:hover,
.c10:focus {
  background: #B29DFF;
}

.c10:active {
  background: #C5B6FF;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: rgba(255,255,255,0.87);
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.13);
}

.c11:active {
  background: rgba(255,255,255,0.18);
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 8px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  min-width: 500px;
  margin-bottom: 32px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c9 {
  box-sizing: border-box;
}

.c8 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c8 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.24);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c8 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.24);
}

.c8 .react-select__control:hover,
.c8 .react-select__control:focus,
.c8 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.56);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c8 .react-select__control:hover .react-select__dropdown-indicator,
.c8 .react-select__control:focus .react-select__dropdown-indicator,
.c8 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c8 .react-select__control .react-select__indicator:hover,
.c8 .react-select__control .react-select__dropdown-indicator:hover,
.c8 .react-select__control .react-select__indicator:focus,
.c8 .react-select__control .react-select__dropdown-indicator:focus,
.c8 .react-select__control .react-select__indicator:active,
.c8 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c8 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.56);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c8 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c8 .react-select__single-value {
  color: #FFFFFF;
}

.c8 .react-select__placeholder {
  color: rgba(255,255,255,0.24);
}

.c8 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c8 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c8 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c8 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c8 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c8 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c8 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c8 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c8 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c8 .react-select__clear-indicator {
  color: rgba(255,255,255,0.56);
}

.c8 .react-select__clear-indicator:hover,
.c8 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c8 .react-select__clear-indicator:hover svg,
.c8 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c8 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c8 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c8 .react-select__indicator-separator {
  display: none;
}

.c8 .react-select__loading-indicator {
  display: none;
}

.c8 .react-select--is-disabled,
.c8 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.18);
  border: 1px solid rgba(255,255,255,0.18);
}

.c8 .react-select--is-disabled .react-select__single-value,
.c8 .react-select__control--is-disabled .react-select__single-value,
.c8 .react-select--is-disabled .react-select__placeholder,
.c8 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.18);
}

.c8 .react-select--is-disabled .react-select__indicator,
.c8 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.18);
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Select a maintenance start window
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          Teleport provides different cluster maintenance windows to minimize downtime during upgrades, patches, etc.
        </div>
        <div
          class="c8"
        >
          <div
            class="react-select-container react-select--is-disabled css-14jk2my-container"
          >
            <div
              class="react-select__control react-select__control--is-disabled css-1fhf3k1-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value react-select__single-value--is-disabled css-107lb6w-singleValue"
                >
                  08:00 (UTC)
                </div>
                <div
                  class="css-b8ldur-Input"
                >
                  <div
                    class="react-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      disabled=""
                      id="react-select-3-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-109onse-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c9"
      >
        <button
          class="c10"
          disabled=""
          kind="primary"
        >
          Save
        </button>
        <button
          class="c11"
          disabled=""
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
